# bistro-e2e-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: playwright.yml
tests/: conftest.py  test_ui_cart.py  test_ui_contents.py
tests/pageobjects/: about.py  cart.py  checkout.py  menu.py  welcome.py
tests/schemas/: models.py
utils/: user_data.py
